got a header and some text. Just getting started

--- a/style.css
+++ b/style.css
@@ -2,9 +2,33 @@ body {
   padding: 0; margin: 0;
 } 
 canvas {
-  vertical-align: top;
+  /*vertical-align: top;*/
+  position: absolute;
+  left:0;
+  top:0;
+  z-index:-1;
+}
+header{
+  background: rgba(0,0,0,0.5);
+  position: fixed;
+  top: 0;
+  width: 100%;
+  text-align: center;
+}
+header ul li{
+  display: inline-block;
+  margin:0 5%;
 }
 h1{
+  margin-top: 100px;
+  font-size: 75px;
+}
+h2{
+  font-size: 60px;
+}
+.white-text{
   color: white;
+  text-decoration: none;
   text-align: center;
+  font-family: sans-serif;
 }
