--- a/style.css
+++ b/style.css
@@ -2,11 +2,12 @@ body {
   padding: 0; margin: 0;
 } 
 canvas {
-  /*vertical-align: top;*/
-  position: absolute;
+  position: relative;
   left:0;
   top:0;
   z-index:-1;
+  width:100%;
+  height: 100%;
 }
 header{
   background: rgba(0,0,0,0.5);
@@ -20,15 +21,26 @@ header ul li{
   margin:0 5%;
 }
 h1{
-  margin-top: 100px;
   font-size: 75px;
 }
 h2{
   font-size: 60px;
+}
+#titleDiv{
+  position: absolute;
+  top: 15%;
+  width: 100%;
+}
+.title{
+  margin: 0 auto;
 }
 .white-text{
   color: white;
   text-decoration: none;
   text-align: center;
   font-family: sans-serif;
+  color: white;
+}
+.spaced{
+  letter-spacing: 0.2em;
 }
