--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
-  padding: 0; margin: 0;
+  padding: 0; 
+  margin: 0;
 } 
 canvas {
   position: relative;
@@ -10,17 +11,19 @@ canvas {
   height: 100%;
 }
 header{
-  background: rgba(0,0,0,0.5);
+  background: rgba(0,0,0,0.6);
   position: fixed;
   top: 0;
   width: 100%;
   text-align: center;
+  z-index: 5;
 }
 header ul li{
   display: inline-block;
   margin:0 5%;
 }
 h1{
+  margin: 0;
   font-size: 75px;
 }
 h2{
@@ -28,7 +31,7 @@ h2{
 }
 #titleDiv{
   position: absolute;
-  top: 15%;
+  top: 25%;
   width: 100%;
 }
 .title{
@@ -43,4 +46,27 @@ h2{
 }
 .spaced{
   letter-spacing: 0.2em;
+}
+.about{
+  margin: 0 10px;
+  text-align: center;
+}
+#profilepic{
+  width: 100%;
+  height: auto;
+  border-radius: 50%;
+  display: inline-block;
+  /*border:solid 1px black;*/
+}
+#borderbox{
+  border:1px solid black; 
+  display: inline-block;
+  width: 30%;
+  padding: 2px;
+}
+#profiletext{
+  display: inline-block;
+  width: 50%;
+  text-align: left;
+
 }
