added some more content to projects section

--- a/style.css
+++ b/style.css
@@ -34,13 +34,18 @@ h2{
 p{
   margin:0;
 }
+
 .laptop{
-  width: 15%;
+  width: 200px;
   height: auto;
   display: inline-block;
+  margin: 0 10px 0 5%;
 }
 .project-desc{
   display: inline-block;
+  /*margin: 5% 0 0 0;*/
+  margin-bottom: 5%;
+  /*margin : auto;*/
 }
 #titleDiv{
   position: absolute;
@@ -65,7 +70,7 @@ p{
   text-align: center;
 }
 .important-text{
-  font-style: bold;
+  font-weight: bold;
 }
 #profilepic{
   width: 100%;
