--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@ h2{
 p{
   margin:0;
 }
+ul {
+  list-style-type: none;
+  /*margin:auto;*/
+}
 
 .laptop{
   width: 200px;
@@ -98,4 +102,15 @@ p{
 #project2{
   background-image: url("./imgs/orangeSineLines.png");
   background-position: center;
+}
+#skillz-section{
+  text-align: center;
+}
+.skillz-div{
+  background: grey;
+  width: 200px;
+  height: 250px;
+  display: inline-block;
+  margin: 5px 5%;
+  /*position: relative;*/
 }
