--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
 body {
   padding: 0; 
   margin: 0;
-} 
+}
+h1,h2,h3,h4,h5,h6{
+  font-family: Impact;
+}
+p,a,li{
+  font-family: Garamond;
+}
 canvas {
   position: relative;
   left:0;
@@ -63,7 +69,7 @@ ul {
   color: white;
   text-decoration: none;
   text-align: center;
-  font-family: sans-serif;
+  /*font-family: sans-serif;*/
   color: white;
 }
 .spaced{
