added a bunch of background images

--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ a:link:active, a:visited:active {
 }
 .project-desc{
   display: inline-block;
-  /*margin: 5% 0 0 0;*/
+  font-size: 1.15em;
   margin-bottom: 5%;
   /*margin : auto;*/
 }
@@ -162,6 +162,16 @@ a:link:active, a:visited:active {
 }
 #project2{
   background-image: url("./imgs/diagonallines.png");
+  background-position: center;
+  background-repeat: no-repeat;
+}
+#project3{
+  background-image: url("./imgs/squiggleCircle2.png");
+  background-position: center;
+  background-repeat: no-repeat;
+}
+#project5{
+  background-image: url("./imgs/sineXandY.png");
   background-position: center;
   background-repeat: no-repeat;
 }
