added a faded background to some text

--- a/style.css
+++ b/style.css
@@ -109,10 +109,12 @@ a:link:active, a:visited:active {
   }
 }
 .project-desc{
+  width: 90%;
+  height: auto;
   display: inline-block;
   font-size: 1.15em;
-  margin-bottom: 5%;
-  /*margin : auto;*/
+  margin:0 10% 5% 10%;
+  background:rgba(255,255,255,0.4);
 }
 #titleDiv{
   position: absolute;
