--- a/style.css
+++ b/style.css
@@ -66,11 +66,15 @@ a:link:active, a:visited:active {
 }
 
 .laptop{
-  width: 200px;
-  height: 200px;
+  height: 300px;
+  width: 300px;
   display: inline-block;
-  margin: 0 10px 0 5%;
+  margin:2% 20px 2% 2%;
 }
+.image-div,.project-div{
+  display: inline-block;
+}
+
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
   .laptop{
     width: 50%;
@@ -118,7 +122,7 @@ a:link:active, a:visited:active {
   display: inline-block;
   font-size: 1.15em;
   margin:0 5% 5% 5%;
-  background:rgba(255,255,255,0.4);
+  background:rgba(255,255,255,0.43);
 }
 #titleDiv{
   position: absolute;
