--- a/style.css
+++ b/style.css
@@ -260,7 +260,7 @@ footer{
     background:rgba(255,255,255,0.2);
   }
   .project-div{
-    font-size: 1em;
+    font-size: 1.25em;
   }
   #profiletext{
     font-size: 1.5em;
@@ -271,7 +271,76 @@ footer{
 
 }
 @media only screen and (min-device-width : 481px) and (max-device-width : 1400px) {
+  .laptop{
+    width: 450px;
+    height: auto;
+    text-align: center;
+    display: block;
+    margin: 0 50%;
+    position: relative;
+  } 
   .image-div{
     margin: 0 auto;
+  }
+  #profiletext{
+    width: 65%;
+  }
+  #profilepic{
+    width: 120%;
+    height: auto; 
+    margin: 0 auto;
+  }
+  .skillz-div{
+    width: 350px;
+    height: 350px;
+    display: block;
+    margin: 15px auto;
+    background: purple;
+    border-radius: 50%;
+  }
+  .circle{
+    width: 350px;
+    height: 350px;
+    display: block;
+  }
+  header{
+  font-size: 2em;
+  }
+  header ul li{
+  margin:3% 2%;
+  }
+  .spaced{
+  letter-spacing: 0.1em;
+  }
+  .skills-list{
+  font-size: 1.95em;
+  }
+  .important-text{
+   font-size: 1.8em;
+  }
+  .project-desc{
+    width: 95%;
+    height: auto;
+    display: inline-block;
+    font-size: 1.25em;
+    margin:0 2.5%;
+    background:rgba(255,255,255,0.43);
+  }
+  .project-desc2{
+    width: 95%;
+    height: auto;
+    display: inline-block;
+    font-size: 1.25em;
+    margin:0 2.5%;
+    background:rgba(255,255,255,0.2);
+  }
+  .project-div{
+    font-size: 1.25em;
+  }
+  #profiletext{
+    font-size: 1.5em;
+  }
+  .fa-div{
+    font-size: 1.5em;
   }
 }
