last commit, seriously

--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ a:link:active, a:visited:active {
   background:rgba(255,255,255,0.2);
 }
 #project1{
-  background-image: url("./imgs/orangeSineLines.png");
+  background-image: url("./imgs/orangeSineLInes.png");
   background-position: center;
 }
 #project2{
